# tinyraytracer

./: .gitignore  CMakeLists.txt  README.md  geometry.h  shapes.h  tinyraytracer.cpp
